test/fail/errors/NotAProperTerm.agda

module NotAProperTerm where

Rel : Set -> Set
Rel A = A -> A -> Prop

